--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
 body{
     width: 100%;
     margin: 0;
     background: red;
+
+    font-family: 'Roboto', sans-serif;
 }
 
 .contenedor{
     width: 80%;
+    height: 100vh;
     margin: 0 auto;
 
     display: flex;
@@ -16,3 +21,139 @@ body{
     background-color: white;
     box-shadow: 0px 0px 15px rgb(53, 0, 0);
 }
+
+.contenedor > * {
+    width: 96%;
+    padding: 1em;
+    border: 1px solid green;
+}
+
+.btn{
+    background-color: red;
+    border:0.2em solid darkred;
+
+    color: white;
+}
+
+.btn:hover{
+    background-color: rgb(255, 255, 255);
+    color: red;
+}
+
+form > input{
+    display: block;
+}
+
+.info{
+    width: 100%;
+
+    background-color: rgb(255, 0, 0);
+    color: white;
+    text-align: center;
+
+    font-size: 2em;
+}
+
+/* ------------------------------  HEADER ------------------------------ */
+
+header{
+    height: 10%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+header > h1{
+    font-size: 4em;
+}
+
+.cuenta{
+    width: 15vw;
+    height: 10vh;
+
+    border:0.2em solid darkred;
+    background-color: white;
+
+    padding: 0.2em;
+}
+
+.cuenta > form{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/* ------------------------------  BODY ------------------------------ */
+
+main, main > *{
+    height: 80%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+main > *{
+    width: 100%;
+    height: 100%;
+}
+
+.vista_login, .vista_retirar, .vista_ingresar, .vista_saldo{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.msg{
+    width: max-content;
+
+    padding: 0.2em;
+
+    background-color: white;
+    box-shadow: 0em 0em 1em rgb(78, 78, 78);
+    text-align: center;
+}
+
+.formulario_menu, .formulario_menu > form{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    border: 1px solid blue;
+}
+
+.btnMenu{
+    display: block;
+
+    width: 20vw;
+    height: 10vh;
+
+    margin-bottom: 2vw;
+
+    
+    font-size: 1em;
+}
+
+
+
+/* ------------------------------  FOOTER ------------------------------ */
+
+footer{
+    height: 10%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
