--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body{
 .contenedor > * {
     width: 96%;
     padding: 1em;
-    border: 1px solid green;
+    
 }
 
 .btn{
@@ -102,6 +102,7 @@ main, main > *{
 main > *{
     width: 100%;
     height: 100%;
+    border: 1px solid red;
 }
 
 .vista_login, .vista_retirar, .vista_ingresar, .vista_saldo{
@@ -128,8 +129,6 @@ main > *{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    border: 1px solid blue;
 }
 
 .btnMenu{
