--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,11 @@ header > h1{
     border:0.2em solid darkred;
     background-color: white;
 
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+
     padding: 0.2em;
 }
 
@@ -87,6 +92,30 @@ header > h1{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+}
+
+.foto{
+    height: 100%;
+    width: max-content;
+}
+
+.foto > img{
+    height: 100%;
+    object-fit: cover;
+}
+
+.usuario{
+    margin-left: 15%;
+}
+
+.nombre{
+    font-weight: bold;
+}
+
+.cod_cuenta{
+    display: block;
+
+    color: gray;
 }
 
 /* ------------------------------  BODY ------------------------------ */
@@ -108,8 +137,12 @@ main > *{
 .vista_login, .vista_retirar, .vista_ingresar, .vista_saldo{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+}
+
+.formulario_ingresar, .formulario_retirar, .formulario_login{
+    margin-top: 8vh;
 }
 
 .msg{
@@ -139,11 +172,59 @@ main > *{
 
     margin-bottom: 2vw;
 
-    
     font-size: 1em;
 }
 
+.saldo{
+    font-size: 4em;
+    font-weight: bold;
 
+    margin-top: 8vh;
+}
+
+.movimientos{
+    width: 50%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    border: 0.2em solid red;
+}
+
+.movimiento{
+    width: 100%;
+    height: 5vh;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    border-bottom: 1px solid gray;
+}
+
+.movimiento > *{
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+
+.movBlanco{
+    background-color: white;
+}
+
+.movColor{
+    background-color:rgb(219, 219, 219);
+}
+
+.entrada{
+    color: green;
+}
+
+.salida{
+    color: red;
+}
 
 /* ------------------------------  FOOTER ------------------------------ */
 
@@ -152,7 +233,11 @@ footer{
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
+.copy{
+    color: gray;
+    font-style: italic;
+}
